refactoring start monitoring price / pnl